tests/ui/coroutine/gen_block.none.stderr
error: expected identifier, found reserved keyword `yield`
  --> $DIR/gen_block.rs:9:19
   |
LL |     let y = gen { yield 42 };
   |             ---   ^^^^^ expected identifier, found reserved keyword
   |             |
   |             while parsing this struct

error[E0422]: cannot find struct, variant or union type `gen` in this scope
  --> $DIR/gen_block.rs:6:13
   |
LL |     let x = gen {};
   |             ^^^ not found in this scope

error[E0422]: cannot find struct, variant or union type `gen` in this scope
  --> $DIR/gen_block.rs:9:13
   |
LL |     let y = gen { yield 42 };
   |             ^^^ not found in this scope

error[E0422]: cannot find struct, variant or union type `gen` in this scope
  --> $DIR/gen_block.rs:12:5
   |
LL |     gen {};
   |     ^^^ not found in this scope

error[E0658]: yield syntax is experimental
  --> $DIR/gen_block.rs:15:16
   |
LL |     let _ = || yield true;
   |                ^^^^^^^^^^
   |
   = note: see issue #43122 <https://github.com/rust-lang/rust/issues/43122> for more information
   = help: add `#![feature(coroutines)]` to the crate attributes to enable

error[E0658]: yield syntax is experimental
  --> $DIR/gen_block.rs:15:16
   |
LL |     let _ = || yield true;
   |                ^^^^^^^^^^
   |
   = note: see issue #43122 <https://github.com/rust-lang/rust/issues/43122> for more information
   = help: add `#![feature(coroutines)]` to the crate attributes to enable
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: aborting due to 6 previous errors

Some errors have detailed explanations: E0422, E0658.
For more information about an error, try `rustc --explain E0422`.
